--- a/contact.html
+++ b/contact.html
@@ -84,22 +84,10 @@
                                     <div class="main-menu  d-none d-lg-block">
                                         <nav>
                                             <ul id="navigation">
-                                                <li><a  href="index.html">home</a></li>
-                                                <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                                    <ul class="submenu">
-                                                            <li><a href="about.html">about</a></li>
-                                                            <li><a href="property_details.html">property details</a></li>
-                                                            <li><a href="elements.html">elements</a></li>
-                                                    </ul>
-                                                </li>
+                                                <li><a href="index.html">home</a></li>
+                                                <li><a href="about.html">about</a></li>
                                                 <li><a href="Property.html">Property</a></li>
-                                                <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                                    <ul class="submenu">
-                                                        <li><a href="blog.html">blog</a></li>
-                                                        <li><a href="single-blog.html">single-blog</a></li>
-                                                    </ul>
-                                                </li>
-                                                <li><a class="active" href="contact.html">Contact</a></li>
+                                                <li><a class="active"href="contact.html">Contact</a></li>
                                             </ul>
                                         </nav>
                                     </div>
@@ -134,6 +122,8 @@
                             <div class="col-xl-12">
                                 <div class="bradcam_text text-center">
                                     <h3>Contact Us</h3>
+                                    <p>Home<span class="ti-angle-double-right"></span>Contact</p>
+
                                 </div>
                             </div>
                         </div>
