--- a/details.html
+++ b/details.html
@@ -147,6 +147,18 @@
     <!-- details  -->
     <div class="property_details">
         <div class="container">
+            <div class="row spad-p">
+                <div class="col-lg-12">
+                    <div class="property-title">
+                        <h3>Country Style House with beautiful garden and terrace</h3>
+                        <a href="#"><i class="fa flaticon-placeholder"></i> London, 76 Guild Street, EC3P 3WF</a>
+                    </div>
+                    <div class="property-price">
+                        <p>For Sale</p>
+                        <span>$345,000</span>
+                    </div>
+                </div>
+            </div>
             <div class="row">
                 <div class="col-xl-12">
                     <div class="property_banner">
@@ -169,7 +181,7 @@
     <!-- /details  -->
     <section class="property-details">
         <div class="container">
-            <div class="row sp-40 spt-40">
+            <div class="row sp-40">
                 <div class="col-lg-8">
                     <div class="p-ins">
                         <div class="row details-top">
