--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <header>
         <div class="header-area ">
             <div class="header-top_area d-none d-lg-block">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="row">
                         <div class="col-xl-5 col-md-5 ">
                             <div class="header_left">
@@ -73,13 +73,13 @@
                 </div>
             </div>
             <div id="sticky-header" class="main-header-area">
-                <div class="container">
+                <div class="container-fluid">
                     <div class="header_bottom_border">
                         <div class="row align-items-center">
                             <div class="col-xl-3 col-lg-2">
                                 <div class="logo">
                                     <a href="index.html">
-                                        <img src="img/logo.png" alt="">
+                                        <img src="img/logo-dark.png" alt="">
                                     </a>
                                 </div>
                             </div>
@@ -89,23 +89,7 @@
                                         <ul id="navigation">
                                             <li><a class="active" href="index.html">home</a></li>
                                             <li><a href="about.html">about</a></li>
-
-                                            <li><a href="#">pages <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="about.html">about</a></li>
-                                                    <li><a href="property_details.html">property details</a></li>
-                                                    <li><a href="details.html">property details</a></li>
-
-                                                    <li><a href="elements.html">elements</a></li>
-                                                </ul>
-                                            </li>
                                             <li><a href="Property.html">Property</a></li>
-                                            <li><a href="#">blog <i class="ti-angle-down"></i></a>
-                                                <ul class="submenu">
-                                                    <li><a href="blog.html">blog</a></li>
-                                                    <li><a href="single-blog.html">single-blog</a></li>
-                                                </ul>
-                                            </li>
                                             <li><a href="contact.html">Contact</a></li>
                                         </ul>
                                     </nav>
@@ -131,33 +115,115 @@
     <!-- header-end -->
 
     <!-- slider_area_start -->
-    <div class="slider_area">
-        <div class="single_slider  d-flex align-items-center slider_bg_1">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-xl-10 offset-xl-1">
-                        <div class="slider_text text-center justify-content-center">
-                            <h3>Find your best Property</h3>
-                            <p>Esteem spirit temper too say adieus who direct esteem.</p>
+    <div class="container-fluid">
+        <div class="col-md-12 col-sm-12">
+            <div class="slider_area">
+                <div class="single_slider  d-flex align-items-center slider_bg_1">
+                    <div class="container">
+                        <div class="row align-items-center">
+                            <div class="col-xl-10 offset-xl-1">
+                                <div class="slider_text text-center justify-content-center">
+                                    <h3>Find your best Property</h3>
+                                    <p>Esteem spirit temper too say adieus who direct esteem.</p>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+
+
     <!-- slider_area_end -->
 
-    <!-- popular_property  -->
-    <div class="popular_property">
+    <!--::apartment_part end::-->
+    <div class="apartment_part">
         <div class="container">
-            <div class="row">
-                <div class="col-lg-12">
-                    <div class="section-title mb-38 mt-31 text-center">
-                        <span class="opacity-text text-uppercase center">FEATURED PROPERTY</span>
-                        <h2 class="uppercase mb-25">FEATURED PROPERTY</h2>
-                        <p>All of our featured property of this month are include</p>
+            <div class="row justify-content-between align-content-center">
+                <div class="col-md-8 col-lg-7">
+                    <div class="section_tittle">
+                        <h1>Provide The <br>
+                            Beautiful Apartment</h1>
                     </div>
                 </div>
+                <div class="col-md-4 col-lg-5">
+                    <div class="view_more_btn float-right d-none d-md-block">
+                        <a href="#" class="btn_2">Read More <span class="ti-arrow-right"></span></a>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-lg-4">
+                    <div class="single_appartment_part">
+                        <div class="appartment_img">
+                            <img src="img/property/2.png" alt="">
+                            <div class="single_appartment_text">
+                                <h3>$1,235632</h3>
+                                <p><span class="ti-location-pin"></span> 384 Treeline Park, San Antonio, TX</p>
+                            </div>
+                        </div>
+                        <div class="single_appartment_content">
+                            <a href="" class="love_us"> <span class="ti-heart"></span> </a>
+                            <p>Home, Apartment</p>
+                            <a href="#">
+                                <h4>Detached House For Sale</h4>
+                            </a>
+                            <ul class="list-unstyled">
+                                <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
+                                <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
+                                <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-lg-4">
+                    <div class="single_appartment_part">
+                        <div class="appartment_img">
+                            <img src="img/property/2.png" alt="">
+                            <div class="single_appartment_text">
+                                <h3>$1,235632</h3>
+                                <p><span class="ti-location-pin"></span> 384 Treeline Park, San Antonio, TX</p>
+                            </div>
+                        </div>
+                        <div class="single_appartment_content">
+                            <a href="" class="love_us"> <span class="ti-heart"></span> </a>
+                            <p>Home, Apartment</p>
+                            <a href="#">
+                                <h4>Detached House For Sale</h4>
+                            </a>
+                            <ul class="list-unstyled">
+                                <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
+                                <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
+                                <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4 col-lg-4">
+                    <div class="single_appartment_part">
+                        <div class="appartment_img">
+                            <img src="img/property/2.png" alt="">
+                            <div class="single_appartment_text">
+                                <h3>$1,235632</h3>
+                                <p><span class="ti-location-pin"></span> 384 Treeline Park, San Antonio, TX</p>
+                            </div>
+                        </div>
+                        <div class="single_appartment_content">
+                            <a href="" class="love_us"> <span class="ti-heart"></span> </a>
+                            <p>Home, Apartment</p>
+                            <a href="#">
+                                <h4>Detached House For Sale</h4>
+                            </a>
+                            <ul class="list-unstyled">
+                                <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
+                                <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
+                                <li><a href=""><span class="flaticon-frame"></span></a> 2400 sqft</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
             </div>
             <div class="row">
                 <div class="col-xl-12">
@@ -166,90 +232,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </div>
-    <!-- /popular_property  -->
-    <!--::apartment_part end::-->
-    <div class="apartment_part">
-        <div class="container">
-        <div class="row justify-content-between align-content-center">
-            <div class="col-md-8 col-lg-7">
-                <div class="section_tittle">
-                    <h1>Provide The <br>
-                    Beautiful Apartment</h1>
-                </div>
-            </div>
-            <div class="col-md-4 col-lg-5">
-                <div class="view_more_btn float-right d-none d-md-block">
-                    <a href="#" class="btn_2">Read More <span class="ti-arrow-right"></span></a>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4 col-lg-4">
-                <div class="single_appartment_part">
-                    <div class="appartment_img">
-                    <img src="img/property/2.png" alt="">
-                    <div class="single_appartment_text">
-                        <h3>$1,235632</h3>
-                        <p><span class="ti-location-pin"></span> 384 Treeline Park, San Antonio, TX</p>
-                    </div>
-                    </div>
-                    <div class="single_appartment_content">
-                    <a href="" class="love_us"> <span class="ti-heart"></span> </a>
-                    <p>Home, Apartment</p>
-                    <a href="#"><h4>Detached House For Sale</h4></a>
-                    <ul class="list-unstyled"> 
-                        <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                        <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                        <li><a href=""><span class="flaticon-frame"></span></a>  2400 sqft</li>
-                    </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-lg-4">
-                <div class="single_appartment_part">
-                    <div class="appartment_img">
-                    <img src="img/property/2.png" alt="">
-                    <div class="single_appartment_text">
-                        <h3>$1,235632</h3>
-                        <p><span class="ti-location-pin"></span> 384 Treeline Park, San Antonio, TX</p>
-                    </div>
-                    </div>
-                    <div class="single_appartment_content">
-                    <a href="" class="love_us"> <span class="ti-heart"></span> </a>
-                    <p>Home, Apartment</p>
-                    <a href="#"><h4>Detached House For Sale</h4></a>
-                    <ul class="list-unstyled"> 
-                        <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                        <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                        <li><a href=""><span class="flaticon-frame"></span></a>  2400 sqft</li>
-                    </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 col-lg-4">
-                <div class="single_appartment_part">
-                    <div class="appartment_img">
-                    <img src="img/property/2.png" alt="">
-                    <div class="single_appartment_text">
-                        <h3>$1,235632</h3>
-                        <p><span class="ti-location-pin"></span> 384 Treeline Park, San Antonio, TX</p>
-                    </div>
-                    </div>
-                    <div class="single_appartment_content">
-                    <a href="" class="love_us"> <span class="ti-heart"></span> </a>
-                    <p>Home, Apartment</p>
-                    <a href="#"><h4>Detached House For Sale</h4></a>
-                    <ul class="list-unstyled"> 
-                        <li><a href=""><span class="flaticon-bath"></span></a> 04</li>
-                        <li><a href=""><span class="flaticon-bed"></span></a> 03</li>
-                        <li><a href=""><span class="flaticon-frame"></span></a>  2400 sqft</li>
-                    </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
         </div>
     </div>
     <!--::apartment_part end::-->
